https://test.kuali.org/jira/browse/KRAFUNC-178
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6561 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-ip-dev/1-prop-distribution.html
+++ b/kra-ip-dev/1-prop-distribution.html
@@ -74,7 +74,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-distribution.html');return document.MM_returnValue" value="Distribution">
           </span></dt>
         <dt><span class="tabright">
-          <input name="Submit" type=submit onClick="MM_goToURL('self','#');return document.MM_returnValue" value="Institute Proposal Actions">
+          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institute Proposal Actions">
           </span></dt>
       </dl>
     </div>
@@ -85,8 +85,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     </div>
     <div class="right">
       <div class="excol">
-        <input name="imageField" type="image" class="tinybutton" onclick="MM_goToURL('parent','prop-proposal.html');return document.MM_returnValue"
-                        src="../images/tinybutton1-retprop.gif">
         <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-siteindex.gif">
         <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-expandall.gif"
                         alt="expand all">
