--- a/kra-ip-dev/1-prop-specialreview.html
+++ b/kra-ip-dev/1-prop-specialreview.html
@@ -81,7 +81,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-distribution.html');return document.MM_returnValue" value="Distribution">
           </span></dt>
           <dt><span class="tabright">
-            <input name="Submit" type=submit onClick="MM_goToURL('self','#');return document.MM_returnValue" value="Institute Proposal Actions">
+            <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institute Proposal Actions">
           </span></dt>
         </dl>
       </div>
