--- a/kra-ip-dev/1-prop-contacts.html
+++ b/kra-ip-dev/1-prop-contacts.html
@@ -164,7 +164,7 @@ function addLoadEvent(func) {
           <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-distribution.html');return document.MM_returnValue" value="Distribution">
           </span></dt>
         <dt><span class="tabright">
-          <input name="Submit" type=submit onClick="MM_goToURL('self','#');return document.MM_returnValue" value="Institute Proposal Actions">
+          <input name="Submit" type=submit onClick="MM_goToURL('parent','1-prop-actions.html');return document.MM_returnValue" value="Institute Proposal Actions">
           </span></dt>
       </dl>
     </div>
