[BFN] KRAFUNC-188 Initial Mock
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6564 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -174,7 +174,7 @@ Page
 			<textarea name="z" style="width:100%; text-align:left;" rows="4"></textarea>
         </td>
         <td style="border:none; width:20px; vertical-align:bottom;">
-			<input name="x" src="../images/pencil_add.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Expanded Text Area" type="image" />
+			<input name="x" src="../images/pencil_add.png" onclick="javascript: alert('This would open a larger editable text area for this field.'); return false" class="tinybutton" alt="Expanded Text Area" type="image" />
 		</td>
     </tr>
 </table>
