--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -155,7 +155,17 @@ Page
                 </table>
           </div>  <!-- end Reporting Requirements tab -->
   
-    
+<!-- Lookup -->
+<table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
+	<tr>
+    	<td style="border:none;">
+			<input type="text" style="width:100%;" value="" />
+        </td>
+        <td style="border:none; width:20px; vertical-align:bottom; text-align:center;">
+			<input name="x" src="../images/searchicon.gif" onclick="javascript: alert('This would open a larger editable text area for this field.'); return false" class="tinybutton" align="top" alt="Search " title="Search " border="0" type="image" />
+		</td>
+    </tr>
+</table>   
 
 <!-- Search -->
 <input name="x" src="../images/searchicon.gif" class="tinybutton" align="top" alt="Search " title="Search " border="0" type="image" />
