--- a/kra-com-dev/irb-meeting.html
+++ b/kra-com-dev/irb-meeting.html
@@ -447,20 +447,20 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </table>
     </div>
     
-    <!-- Tabbed Panel Head: Attendence -->
+    <!-- Tabbed Panel Head: Attendance -->
     <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
         <tr>
-            <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Attendence</td>
+            <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Attendance</td>
             <td class="tabtable2-mid"><a href="#" id="A127" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F127" ></a> </td>
             <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
         </tr>
     </table>
     <div class="tab-container" align="center" id="G127" style="display: none;">
         
-        <!-- Panel: Attendence -->
+        <!-- Panel: Attendance -->
         	<div class="h2-container">
             	<span class="subhead-left">
-        			<h2>Attendence</h2>
+        			<h2>Attendance</h2>
         		</span>
               	<span class="subhead-right">
                 	<span class="subhead">
