--- a/kra-awa-dev/aw-contacts.html
+++ b/kra-awa-dev/aw-contacts.html
@@ -62,7 +62,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-commitments.html');return document.MM_returnValue" value="Commitments">
         </span></dt>
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Time & Money">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-budgetversions.html');return document.MM_returnValue" value="Budget Versions">
         </span></dt>
       <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-payments-reports-terms.html');return document.MM_returnValue" value="Payment, Reports & Terms">
@@ -92,7 +92,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   </div>
   <div class="right">
 <div class="excol">
-          <input name="imageField" type="image" class="tinybutton" onClick="MM_openBrWindow('../BFN/medusahierarchyAP.html','','scrollbars=yes,resizable=yes,width=800,height=600')" src="../images/tinybutton-medusa.gif" />
+          <input name="imageField" type="image" class="tinybutton" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" src="../images/tinybutton-timemoney.gif" />
           <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-siteindex.gif" onclick="javascript: alert('If this were not a mock, this button would open the Site Index.'); return false;" />
           <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-expandall.gif" onclick="javascript: alert('If this were not a mock, this button would expand all panels.'); return false;" alt="expand all" />
           <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-collapseall.gif" onclick="javascript: alert('If this were not a mock, this button would collapse all panels.'); return false;" alt="collapse all" />
