--- a/kra-awa-dev/aw-commitments.html
+++ b/kra-awa-dev/aw-commitments.html
@@ -246,7 +246,7 @@
 
 <!-- PAGE HEADER -->
 <div class="headerarea-kra" id="headerarea">
-    <h1>Awards - Time &amp; Money<a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 hspace="12" border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
+    <h1>Awards - Commitments<a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 hspace="12" border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
     <div class="headerbox">
         <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
             <tr>
@@ -285,7 +285,7 @@
                 <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Commitments">
             </span></dt>
             <dt><span class="tabright">
-                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Time & Money">
+                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-budgetversions.html');return document.MM_returnValue" value="Budget Versions">
             </span></dt>
             <dt><span class="tabright">
                 <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-payments-reports-terms.html');return document.MM_returnValue" value="Payment, Reports & Terms">
@@ -317,7 +317,7 @@
     </div>
     <div class="right">
         <div class="excol">
-          <input name="imageField" type="image" class="tinybutton" onClick="MM_openBrWindow('../BFN/medusahierarchyAP.html','','scrollbars=yes,resizable=yes,width=800,height=600')" src="../images/tinybutton-medusa.gif" />
+          <input name="imageField" type="image" class="tinybutton" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" src="../images/tinybutton-timemoney.gif" />
           <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-siteindex.gif" onclick="javascript: alert('If this were not a mock, this button would open the Site Index.'); return false;" />
           <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-expandall.gif" onclick="javascript: alert('If this were not a mock, this button would expand all panels.'); return false;" alt="expand all" />
           <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-collapseall.gif" onclick="javascript: alert('If this were not a mock, this button would collapse all panels.'); return false;" alt="collapse all" />
