[BFN] KRAFUNC-124 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6569 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -2189,10 +2189,10 @@
                     <table align="center" cellpAdding="0" cellspacing="0"  summary=""  >
                         <tr>
                             <th>&nbsp;</th>
-                            <th>Type</th>
+                            <th>*Type</th>
                             <th>Comment</th>
-                            <th>Source</th>
-                            <th>Destination</th>
+                            <th>*Source</th>
+                            <th>*Destination</th>
                             <th>Obligated </th>
                             <th>Anticipated </th>
                             <th>Actions</th>
