https://test.kuali.org/jira/browse/KRAFUNC-207
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6572 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -119,10 +119,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table class="datatable" summary="view/edit document overview information" cellpAdding="0" cellspacing="0">
               <tbody>
                 <tr>
-                  <th colspan="1" align="right"><label for="document.documentHeader.financialDocumentDescription7">*Description:</label></th>
-                  <td align="left" valign="middle"><input name="document.documentHeader.financialDocumentDescription" maxlength="40" size="45" tabindex="0" value="" onchange="" onblur="" style="" id="document.documentHeader.financialDocumentDescription" type="text"></td>
-                  <th colspan="1" rowspan="2" align="right"><label for="document.documentHeader.financialDocumentDescription7">*Explanation:</label></th>
-                  <td rowspan="2" align="left" valign="middle"><table style="border:none; width:100%;">
+                  <th colspan="1" align="right" width="20%"><label for="document.documentHeader.financialDocumentDescription7">*Description:</label></th>
+                  <td align="left" valign="middle" width="30%"><input name="document.documentHeader.financialDocumentDescription" maxlength="40" size="45" tabindex="0" value="" onchange="" onblur="" style="" id="document.documentHeader.financialDocumentDescription" type="text"></td>
+                  <th colspan="1" rowspan="2" align="right" width="20%"><label for="document.documentHeader.financialDocumentDescription7">Explanation:</label></th>
+                  <td rowspan="2" align="left" valign="middle"width="30%"><table style="border:none; width:100%;">
                     <tr>
                       <td style="border:none; width:100%;"><textarea name="textarea5" style="width:100%;" rows="2" id="textarea5"></textarea></td>
                       <td style="border:none; width:20px; vertical-align:bottom;"><input name="image12" type="image" class="nobord" onClick="MM_openBrWindow('../global/expandedtext.html','','width=700,height=300')" src="../images/pencil_add.png" alt="expand textarea"></td>
