https://test.kuali.org/jira/browse/KRAFUNC-18
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6574 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -166,7 +166,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
             <table cellpAdding=0 cellspacing="0"  summary="">
               <tr>
-                <th scope="row">&nbsp;</th>
+                <th scope="row">Award Sequence #</th>
                 <th>Principal Investigator</th>
                 <th>Lead Unit</th>
                 <th>Proposed Sponsor</th>
@@ -176,6 +176,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <th><div align="center">Actions</div></th>
               </tr>
               <!-- Robbins, Martha (1) -->
+              <tr>
+                <th align="" scope="row">1</th>
+                <th colspan="7" align="" scope="row">&nbsp;</th>
+              </tr>
               <tr>
                 <td align="right" class="tab-subhead1" scope="row"><div align="center"><a href="#" id="A6" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F6" vspace=0></a></div></td>
                 <td class="tab-subhead1"><div align="left">Robbins, Martha</div></td>
@@ -332,7 +336,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       </tr>
                     </table></td>
                 </tr>
-              </tbody>
+              </tbody> <tr>
+                <th align="" scope="row">2</th>
+                <th colspan="7" align="" scope="row">&nbsp;</th>
+              </tr>
               <!-- Robbins, Martha (3) -->
               <tr>
                 <td align="right" class="tab-subhead1" scope="row"><div align="center"><a href="#" id="A8" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F8" vspace=0></a></div></td>
