git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6575 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-ip-dev/1-prop-intelprop.html
+++ b/kra-ip-dev/1-prop-intelprop.html
@@ -143,7 +143,10 @@ function MM_goToURL() { //v3.0
               </tr>
               <tr>
                 <th  align="right">Reviewer</th>
-                <td >Tyler Wilson (<a href="#">remove</a>)</td>
+                <td >Tyler Wilson 
+                  <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
+                  <br>
+                  (<a href="#">remove</a>)                </td>
                 <th  align="right">&nbsp;</th>
                 <td >&nbsp;</td>
               </tr>
