https://test.kuali.org/jira/browse/KRAFUNC-87
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6577 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -82,7 +82,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </span></dt>
         <dt><span class="tabright">
           <input name="Submit" type="submit" onclick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions" />
-          </span></dt>
+          </span></dt><dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+        </span></dt>
       </dl>
     </div>
   </div>
