--- a/kra-awa-dev/aw-actions.html
+++ b/kra-awa-dev/aw-actions.html
@@ -78,7 +78,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Comments, Notes &amp; Attachments">
         </span></dt> <dt class="licurrent" ><span class="tabright tabcurrent">
         <input name="Submit2" type="submit" onClick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions">
-        </span></dt>  
+        </span></dt>  <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+        </span></dt>
     </dl>
   </div>
 </div>
