--- a/kra-awa-dev/aw-commitments.html
+++ b/kra-awa-dev/aw-commitments.html
@@ -305,7 +305,11 @@
             </span></dt>
             <dt><span class="tabright">
                 <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions">
-            </span></dt>
+        </span></dt>
+        
+              <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-medusahierarchyAP.html');return document.MM_returnValue" value="Medusa">
+        </span></dt>
         </dl>
     </div>
 </div>
