[BFN] KRAFUNC-208 updates: Award Budget File Structure.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6581 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-budgetversions.html
+++ b/kra-awa-dev/aw-budgetversions.html
@@ -535,9 +535,9 @@
                20,000.00
                 </div></td>
               <td class="tab-subhead1" style="text-align:center; white-space:nowrap;">
-                  <input src="../images/tinybutton-open.gif" onclick="javascript: alert('Please let Bart or Tom know what this button does so we can add a description of the functionality here.'); return false" class="tinybutton" alt="open" title="Open" type="image" />
+                  <a href="abud-parameters.html"><img src="../images/tinybutton-open.gif" style="border:none;" alt="open award budget" title="Open Award Budget" /></a>
                   <input src="../images/tinybutton-rebudget.gif" onclick="javascript: alert('Please let Bart or Tom know what this button does so we can add a description of the functionality here.'); return false" class="tinybutton" alt="rebudget" title="Rebudget" type="image" />
-                  <input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('Please let Bart or Tom know what this button does so we can add a description of the functionality here.'); return false" class="tinybutton" alt="delete" title="Delete" type="image" />
+                  <input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove this data row.'); return false" class="tinybutton" alt="delete" title="Delete" type="image" />
               </td>
             </tr>
             <tbody id="G6" style="display: none;">
